<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="20dp"
        android:text="@string/result"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/result">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="187dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_light"
                android:onClick="clearClick"
                android:text="@string/clear"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="#ADADAD"
                android:onClick="delClick"
                android:text="@string/del"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDivided"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="#C5D8FF"
                android:onClick="operatorClick"
                android:text="@string/divided"
                android:textColor="#6398FF"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/first">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="digitClick"
                android:text="@string/_7"
                android:textColor="#6398FF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="digitClick"
                android:text="@string/_8"
                android:textColor="#6398FF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="digitClick"
                android:text="@string/_9"
                android:textColor="#6398FF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMultiple"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="#C5D8FF"
                android:onClick="operatorClick"
                android:text="@string/multiple"
                android:textColor="#6398FF"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/third"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/second">

            <Button
                android:id="@+id/btnFour"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="digitClick"
                android:text="@string/_4"
                android:textColor="#6398FF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="digitClick"
                android:text="@string/_5"
                android:textColor="#6398FF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="digitClick"
                android:text="@string/_6"
                android:textColor="#6398FF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="#C5D8FF"
                android:onClick="operatorClick"
                android:text="@string/min"
                android:textColor="#6398FF"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourth"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/third">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="digitClick"
                android:text="@string/_1"
                android:textColor="#6398FF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="digitClick"
                android:text="@string/_2"
                android:textColor="#6398FF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="digitClick"
                android:text="@string/_3"
                android:textColor="#6398FF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="#C5D8FF"
                android:onClick="operatorClick"
                android:text="@string/plus"
                android:textColor="#6398FF"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fifth"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fourth">

            <Button
                android:id="@+id/btnDec"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:textColor="#6398FF"
                android:onClick="digitClick"
                android:text="@string/decimal"
                android:backgroundTint="#C5D8FF"
                android:textSize="30sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/btnZero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="digitClick"
                android:text="@string/_0"
                android:textColor="#6398FF"
                android:textSize="30sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnEquals"
                android:layout_width="187dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="#417FF6"
                android:onClick="equalsClick"
                android:text="@string/equals"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>